[package]
name = "zeroclaw-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel implementations for messaging platform integrations."
publish = false

[dependencies]
zeroclaw-api.workspace = true
zeroclaw-spawn.workspace = true
zeroclaw-infra.workspace = true
zeroclaw-config = { workspace = true, default-features = false }
zeroclaw-log.workspace = true
zeroclaw-memory.workspace = true
zeroclaw-providers.workspace = true
zeroclaw-runtime.workspace = true
zeroclaw-tool-call-parser.workspace = true
zeroclaw-tools.workspace = true
anyhow = "1.0"
lru = "0.16"
rumqttc = { version = "0.25", optional = true }
notify = { version = "6", optional = true }
glob = { version = "0.3", optional = true }
lapin = { version = "2", optional = true, default-features = false, features = [
  "rustls",
] }
tokio-executor-trait = { version = "2", optional = true }
tokio-reactor-trait = { version = "1", optional = true }
async-reactor-trait = { version = "1", optional = true }
p12-keystore = { version = "0.1", optional = true }
rustls-pemfile = { version = "2", optional = true }
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "macros",
  "query",
  "tokio",
  "ws",
] }
async-imap = { version = "0.11", features = [
  "runtime-tokio",
], default-features = false, optional = true }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
] }
hmac = "0.12"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
], optional = true }
lettre = { version = "0.11.22", default-features = false, features = [
  "builder",
  "rustls-tls",
  "smtp-transport",
], optional = true }
pulldown-cmark = { version = "0.13", optional = true }
mail-parser = { version = "0.11.2", optional = true }
matrix-sdk = { version = "0.18", optional = true, default-features = false, features = [
  "e2e-encryption",
  "markdown",
  "sqlite",
] }
mime_guess = { version = "2", optional = true }
nostr-sdk = { version = "0.44", default-features = false, features = [
  "nip04",
  "nip59",
], optional = true }
parking_lot = "0.12"
portable-atomic = "1"
prost = { version = "0.14", default-features = false, features = [
  "derive",
], optional = true }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
  "__rustls-ring",
  "json",
  "multipart",
  "rustls-tls-webpki-roots-no-provider",
  "stream",
] }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = [
  "logging",
  "ring",
  "std",
  "tls12",
] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-rustls = { version = "0.26.4", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7", default-features = false }
toml = "1.0"
urlencoding = "2.1"
uuid = { version = "1.22", default-features = false, features = ["std", "v4"] }
hex = "0.4"
nanohtml2text = "0.2"
rand = "0.10"
webpki-roots = "1.0.6"
tokio-socks = "0.5"

# WhatsApp Web (optional)
# Upstream crates from oxidezap/whatsapp-rust, pinned to commit cbcdd2a.
# Pinning via a plain `git` source (not `[patch.crates-io]`) keeps the
# workspace buildable until oxidezap publishes the fix as 0.6.1, at which
# point this block reverts to versioned crates.io deps.
#
# Commit history:
# - 9734fb2: MSRV fix for `if let` guard (wacore/src/history_sync.rs:93)
#            stable only on Rust 1.94+; ZeroClaw CI pins 1.93.0.
#            Fixes the post-2026-04-24 WhatsApp Web protocol break (#6246).
# - cbcdd2a: PR #636 fix for LID namespace conversion. Fixes ACK 400
#            "server requires all participants to share the same JID
#            namespace" error when sending DMs to LID-addressed recipients.
whatsapp-rust = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true, default-features = false, features = [
  "tokio-runtime",
] }
wacore = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true, default-features = false }
wacore-binary = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true, default-features = false }
waproto = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true, default-features = false }
serde-big-array = { version = "0.5", optional = true }

cpal = { version = "0.15", optional = true }
whatsapp-rust-ureq-http-client = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true }
whatsapp-rust-tokio-transport = { git = "https://github.com/oxidezap/whatsapp-rust", rev = "cbcdd2a6b931d804f3c2693554dce75e654834e3", optional = true, default-features = false }
qrcode = { version = "0.14", optional = true }
# `bytes` is required for the `Bytes` return types in wacore 0.6 storage
# traits (SignalStore::get_session / load_prekey). Feature-gated to
# whatsapp-web alongside the rest of the WA Web stack.
bytes = { version = "1", optional = true }
shellexpand = "3.1"

# WeChat iLink (optional) — AES-128-ECB and MD5 are mandated by the iLink
# Bot media encryption protocol. The CDN requires ECB-mode ciphertext and
# MD5 file checksums in upload requests. Not our choice of primitives.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
ecb = { version = "0.1", optional = true }
md5 = { version = "0.8", optional = true }

[features]
default = ["default-channels"]
default-channels = [
  "channel-acp-server",
  "channel-discord",
  "channel-email",
  "channel-filesystem",
  "channel-telegram",
  "channel-webhook",
]
channels-full = [
  "channel-bluesky",
  "channel-clawdtalk",
  "channel-dingtalk",
  "channel-discord",
  "channel-imessage",
  "channel-irc",
  "channel-lark",
  "channel-linq",
  "channel-mattermost",
  "channel-mochat",
  "channel-mqtt",
  "channel-amqp",
  "channel-nextcloud",
  "channel-notion",
  "channel-qq",
  "channel-reddit",
  "channel-signal",
  "channel-slack",
  "channel-twitch",
  "channel-twitter",
  "channel-voice-call",
  "channel-wati",
  "channel-wecom",
  "channel-wecom-ws",
  "channel-whatsapp-cloud",
  "default-channels",
]
# Channels with optional deps
channel-email = [
  "dep:async-imap",
  "dep:lettre",
  "dep:mail-parser",
  "dep:pulldown-cmark",
]
image-normalization = ["dep:image"]
channel-telegram = ["image-normalization"]
channel-lark = ["dep:prost"]
channel-line = []
channel-nostr = ["dep:nostr-sdk"]
whatsapp-web = [
  "dep:bytes",
  "dep:prost",
  "dep:qrcode",
  "dep:serde-big-array",
  "dep:wacore",
  "dep:wacore-binary",
  "dep:waproto",
  "dep:whatsapp-rust",
  "dep:whatsapp-rust-tokio-transport",
  "dep:whatsapp-rust-ureq-http-client",
  "image-normalization",
]
# Channels with no optional deps (cfg gate only)
channel-discord = []
channel-slack = []
channel-signal = []
channel-mattermost = []
channel-irc = []
channel-twitch = ["channel-irc"]
channel-imessage = []
channel-dingtalk = []
channel-qq = []
channel-bluesky = []
channel-twitter = []
channel-reddit = []
channel-notion = []
channel-mqtt = ["dep:rumqttc"]
channel-filesystem = ["dep:notify", "dep:glob"]
channel-amqp = ["dep:lapin", "dep:tokio-executor-trait", "dep:tokio-reactor-trait", "dep:async-reactor-trait", "dep:p12-keystore", "dep:rustls-pemfile"]
channel-linq = []
channel-wati = []
channel-nextcloud = []
channel-mochat = []
channel-wechat = [
  "dep:aes",
  "dep:ecb",
  "dep:md5",
  "dep:mime_guess",
  "dep:qrcode",
]
channel-wecom = []
channel-wecom-ws = ["dep:aes", "dep:cbc"]
channel-clawdtalk = []
channel-webhook = []
channel-whatsapp-cloud = []
channel-voice-call = []
channel-acp-server = []
channel-matrix = ["dep:matrix-sdk", "dep:mime_guess"]
voice-wake = ["dep:cpal"]

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "json",
  "tokio",
] }
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
tempfile = "3.26"
toml = "1.0"
wiremock = "0.6"
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
