[package]
name = "zeroclaw-hardware"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware discovery, peripherals, and device management for ZeroClaw."
publish = false

[dependencies]
zeroclaw-log.workspace = true
zeroclaw-api.workspace = true
zeroclaw-config.workspace = true
zeroclaw-tools.workspace = true
# Only used behind the `hardware` feature (the aardvark module + boot() discovery).
aardvark-sys = { workspace = true, optional = true }

anyhow = "1.0"
async-trait = "0.1"
directories = "6.0"
glob = "0.3"
portable-atomic = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs"] }
tempfile = "3.26"
toml = "1.0"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"], optional = true }
console = { version = "0.16", optional = true }

# Optional hardware deps
nusb = { version = "0.2", default-features = false, optional = true }
tokio-serial = { version = "5", default-features = false, optional = true }
probe-rs = { version = "0.31", optional = true }
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }

[features]
default = []
hardware = ["dep:aardvark-sys", "dep:nusb", "dep:tokio-serial", "dep:dialoguer", "dep:console"]
peripheral-rpi = ["rppal"]
probe = ["dep:probe-rs"]
# Extends the serial peripheral allow-list with `/tmp/zc-sim-*` for hardware-free
# local testing (paired with the `esp32_sim` example). Off by default; opt-in.
#
# Note: this feature is normally used together with the `hardware` feature
# (i.e. `--features "hardware,dev-sim"`).
dev-sim = []

[dev-dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "ws", "macros"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "io-util", "signal"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
zeroclaw-spawn.workspace = true

[[example]]
name = "esp32_sim"
required-features = ["hardware", "dev-sim"]
