[package]
name = "zeroclaw-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel infrastructure: session backends, debouncing, stall watchdog."
publish = false

[dependencies]
zeroclaw-log.workspace = true
zeroclaw-api.workspace = true
zeroclaw-spawn.workspace = true
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
portable-atomic = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = ["sync", "time"] }

[dev-dependencies]
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
