[package]
name = "zeroclaw-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory backends, embeddings, consolidation, and retrieval for ZeroClaw."
publish = false

[dependencies]
zeroclaw-log.workspace = true
zeroclaw-api.workspace = true
zeroclaw-providers.workspace = true
zeroclaw-spawn.workspace = true
zeroclaw-config = { workspace = true, default-features = false }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider", "__rustls-ring"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tokio = { version = "1.50", default-features = false, features = ["fs", "sync", "time"] }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }

[features]
memory-postgres = ["dep:postgres", "zeroclaw-config/memory-postgres"]

[dev-dependencies]
filetime = "0.2"
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
