[package]
name = "zeroclaw-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin system for ZeroClaw — host, manifests, signatures, execution bridge."
publish = false

[features]
default = ["plugins-wit-v0"]
plugins-wit-v0 = []
plugins-wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:wasmtime-wasi-http"]
plugins-wasm-cranelift = ["plugins-wasmtime", "wasmtime/cranelift"]
plugins-wasm-pulley = ["plugins-wasmtime", "wasmtime/pulley"]

[dependencies]
zeroclaw-log.workspace = true
zeroclaw-api.workspace = true
zeroclaw-infra.workspace = true
zeroclaw-spawn.workspace = true
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
ring = "0.17"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["sync", "macros", "rt", "time"] }
toml = "1.0"
wasmtime = { version = "45.0.3", default-features = false, features = [
  "component-model",
  "runtime",
  "std",
  "async",
], optional = true }
wasmtime-wasi = { version = "45.0.3", default-features = false, features = [
  "p2",
], optional = true }
wasmtime-wasi-http = { version = "45.0.3", default-features = false, features = [
  "p2",
  "default-send-request",
], optional = true }

[dev-dependencies]
tempfile = "3.26"
zeroclaw-config = { path = "../zeroclaw-config" }
