[package]
name = "zeroclaw-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations, auth services, and multimodal processing."
publish = false

[dependencies]
zeroclaw-log.workspace = true
zeroclaw-api.workspace = true
zeroclaw-spawn.workspace = true
zeroclaw-config = { workspace = true, default-features = false }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
chacha20poly1305 = "0.10"
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
rand = "0.10"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider", "rustls-tls-native-roots-no-provider", "__rustls-ring", "blocking", "multipart", "stream", "socks"] }
ring = "0.17"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "fs"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }
tokio-util = { version = "0.7", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["test-util"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
hyper = { version = "1", features = ["http1", "server"] }
tempfile = "3.26"
scopeguard = "1.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
