[package]
name = "fill-translations"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fill-translations"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros"] }
toml = "0.8"
xtask = { path = "../../xtask" }
zeroclaw-api = { workspace = true }
zeroclaw-providers = { workspace = true }
